NEW: Bilder für Slider, Fertige Geräte erzänzt

--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
   			<ul>
           <li>Giraffe</li>
           <li>Savannenbaum mit Anschluss an Giraffe</li>
+          <li class="inarbeit">Wasserbüffel</li>
+          <li class="inarbeit">Sitzbaum</li>
+          <li class="inarbeit">Savannenbäume</li>
         </ul>
         <h2>Europa</h2>
   			<ul>
@@ -188,6 +191,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
           <li>Seilbahn</li>
           <li>Tigerrutsche</li>
           <li>Dschungelparkour</li>
+          <li>Chinesische Mauer</li>
         </ul>
 
       </div>
@@ -203,6 +207,11 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
           <li>Pinguine</li>
           <li>Eisbrecher</li>
           <li>Seehundbank</li>
+        </ul>
+
+        <h2>Ozeane</h2>
+  			<ul>
+          <li>Einbaum</li>
         </ul>
   		</div>
     </div>
@@ -250,7 +259,10 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 			<div class="block">
         <div class="owl-carousel owl-theme">
           <img class="img-responsive lazyowl" data-original="images/ayersrockV.jpg" alt="Fledermausschaukel in Australien">
-					<img class="img-responsive owl-lazy" data-src="images/entwurf/australien.jpg" alt="Fledermausschaukel in Australien">
+          <img class="img-responsive owl-lazy" data-src="images/uluru.jpg" alt="Uluru">
+					<img class="img-responsive owl-lazy" data-src="images/entwurf/australien.jpg" alt="Fledermausschaukel in Australien als Entwurf">
+          <img class="img-responsive owl-lazy" data-src="images/fledermausschaukel.jpg" alt="Fledermausschaukel fertig gebaut">
+          <img class="img-responsive owl-lazy" data-src="images/wombat.jpg" alt="Wombat zum reinkriechen">
 				</div>
 			</div>
 		</div>
@@ -286,6 +298,8 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
         <div class="owl-carousel owl-theme">
 					<img class="img-responsive lazyowl" data-original="images/chinesischemauerV.jpg" alt="Chinesische Mauer in Asien">
 					<img class="img-responsive owl-lazy" data-src="images/entwurf/asien.jpg" alt="Asiatischer Dschungel">
+          <img class="img-responsive owl-lazy" data-src="images/dschungelparkour.jpg" alt="Kletterwald und Dschungelparkour">
+          <img class="img-responsive owl-lazy" data-src="images/tigerrutsche.jpg" alt="Tigerrutsche">
 				</div>
 			</div>
 		</div>
