FIX: Ansprechpartner, chinesische Mauer

--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
           <li>Seilbahn</li>
           <li>Tigerrutsche</li>
           <li>Dschungelparkour</li>
-          <li>Chinesische Mauer</li>
         </ul>
 
       </div>
@@ -487,7 +486,7 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 
 
 
-			<p class="oc"><strong>Ansprechpartnerin: </strong>Frau Dr. Lehmann<br><strong>Tel.: </strong>(030) 90297 – 5823
+			<p class="oc"><strong>Ansprechpartner: </strong>Herr Mathias Glüsenkamp<br><strong>Tel.: </strong>(030) 90297 – 5823
         <br>
       <strong>E-Mail, für Spendenquittung: </strong><a href="javascript:linkTo_UnCryptMailto('nbjmup;jogpAxfmutqjfmqmbu{/ef');">info[ät]weltspielplatz[punkt]de</a>
       </p>
