MOD: https dependencies

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="description" content="Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des My Theo e.V. Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen.">
 <meta name="viewport" content="width=768, user-scalable=yes, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel='stylesheet' id='stylesheet-weltspielplatz'  href='./css/style.css' type='text/css' media='all' />
 <link href="css/ticker-style.css" rel="stylesheet" type="text/css" />
-<link rel='stylesheet' id='animatecss'  href='http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css' type='text/css' media='all' />
+<link rel='stylesheet' id='animatecss'  href='//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css' type='text/css' media='all' />
  <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
  <link rel="stylesheet" href="js/owl/assets/owl.carousel.min.css">
  <link rel="stylesheet" href="js/owl/assets/owl.theme.default.min.css">
@@ -15,9 +15,9 @@
 <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.png" type="image/png" />
 
-<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
+<script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
 <!--<script type="text/javascript" src="js/jquery.ticker.js"></script>-->
-<script type="text/javascript" data-main="js/main" src="js/require.js?x=4"></script>
+<script type="text/javascript" data-main="js/main" src="js/require.js?x=5"></script>
 
 <script type="text/javascript">
 <!--
