--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
           <li>Bauernhof</li>
           <li>Wippende Hühner</li>
           <li>Käse</li>
+          <li class="inarbeit">Telefonzelle</li>
         </ul>
         <h2>Asien</h2>
   			<ul>
