NEW: Fertige Spielgeräte in Afrika

--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
   			<ul>
           <li>Giraffe</li>
           <li>Savannenbaum mit Anschluss an Giraffe</li>
-          <li class="inarbeit">Wasserbüffel</li>
-          <li class="inarbeit">Sitzbaum</li>
-          <li class="inarbeit">Savannenbäume</li>
+          <li class="">Wasserbüffel</li>
+          <li class="">Sitzbaum</li>
+          <li class="">Savannenbäume</li>
         </ul>
         <h2>Europa</h2>
   			<ul>
           <li>Bauernhof</li>
           <li>Wippende Hühner</li>
           <li>Käse</li>
-          <li class="inarbeit">Telefonzelle</li>
+          <li class="">Telefonzelle</li>
         </ul>
         <h2>Asien</h2>
   			<ul>
